# weni-cli

./: .flake8  .gitignore  404.html  CHANGELOG.md  MANIFEST.in  README.md  agent_definition.yaml  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: ci.yaml  docs.yml  publish.yaml
commands/project/: index.html
community/community/: index.html
contributing/: index.html
core-concepts/active-agents/: index.html
core-concepts/agents/: index.html
core-concepts/broadcasts/: index.html
core-concepts/constants/: index.html
core-concepts/contact-fields/: index.html
core-concepts/contacts/: index.html
core-concepts/credentials/: index.html
core-concepts/events/: index.html
core-concepts/final-response/: index.html
core-concepts/passive-agents/: index.html
core-concepts/skills/: index.html
core-concepts/tools/: index.html
docs/: contributing.md  index.md
docs/commands/: project.md
docs/community/: community.md
docs/core-concepts/: active-agents.md  agents.md  broadcasts.md  constants.md  contact-fields.md  contacts.md  credentials.md  events.md  final-response.md  passive-agents.md  skills.md  tools.md
docs/eval/: evaluation.md
docs/examples/: book-agent.md  cep-agent.md  gallery.md  movie-agent.md  news-agent.md
docs/getting-started/: authentication.md  configuration.md  installation.md  quickstart-developers.md  quickstart-non-developers.md  quickstart.md
docs/help/: README.md
docs/help/cursor-skill/: SKILL.md  constitution.md
docs/run/: active-agent-run.md  logs.md  skill-run.md  tool-run.md
docs/stylesheets/: extra.css
docs/user-guide/: agents.md  authentication.md  channels.md  projects.md  ticketers.md
docs/utils/: commands-glossary.md
eval/evaluation/: index.html
examples/book-agent/: index.html
examples/cep-agent/: index.html
examples/gallery/: index.html
examples/movie-agent/: index.html
examples/news-agent/: index.html
getting-started/authentication/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/quickstart-developers/: index.html
getting-started/quickstart-non-developers/: index.html
help/: index.html
help/cursor-skill/SKILL/: index.html
help/cursor-skill/constitution/: index.html
run/active-agent-run/: index.html
run/logs/: index.html
run/skill-run/: index.html
run/tool-run/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: test_eval.py  test_get_logs.py  test_init.py  test_jwt_generator.py  test_login.py  test_project_current.py  test_project_list.py  test_project_push.py  test_project_use.py  test_run.py  test_store.py
tools/get_address/: main.py
user-guide/agents/: index.html
user-guide/authentication/: index.html
user-guide/channels/: index.html
user-guide/projects/: index.html
user-guide/ticketers/: index.html
utils/commands-glossary/: index.html
weni_cli/: __init__.py  auth.py  cli.py  handler.py  jwt_generator.py  store.py  utils.py  wsgi.py
weni_cli/clients/: __init__.py  cli_client.py  common.py  nexus_client.py  weni_client.py
weni_cli/clients/response_handlers/: __init__.py  handlers.py
weni_cli/clients/tests/: __init__.py  test_cli_client.py  test_weni_client.py
weni_cli/commands/: channel_create.py  eval_init.py  eval_run.py  init.py  login.py  logs.py  project_current.py  project_list.py  project_push.py  project_use.py  run.py  ticketer_create.py
weni_cli/commands/logs/: get.py
weni_cli/formatter/: __init__.py  formatter.py
weni_cli/packager/: __init__.py  loader.py  packager.py
weni_cli/spinner/: __init__.py  spinners.py
weni_cli/validators/: agent_definition.py  channel_definition.py  definition.py  source.py  ticketer_definition.py
(+11 files in other folders)
