[tool.poetry]
name = "weni-cli"
version = "3.3.2"
description = ""
authors = ["Paulo Bernardo <paulo.bernardo@weni.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.8"
requests = "^2.32.3"
flask = "^3.1.1"
waitress = "^3.0.2"
pyyaml = "^6.0.2"
python-slugify = "^8.0.4"
regex = "^2024.11.6"
weni-agents-toolkit = "2.2.1"
rich-click = "^1.8.6"
rich = "^13.9.4"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"
pytest-cov = "^6.0.0"
mypy = "^1.15.0"

[tool.poetry.scripts]
weni = "weni_cli.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.pytest]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["weni_cli"]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["weni_cli"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.pytest_cache/*",
    "*/__init__.py"
]
